syntax = "proto3";

option java_package = "com.proto.saludo";

message SaludoRequest{
    string nombre = 1;
}

message SaludoResponse{
    string resultado = 1;
}

service SaludoService{
    rpc saludo(SaludoRequest) returns (SaludoResponse);
    rpc saludoStream(SaludoRequest) returns (stream SaludoResponse);
    rpc leerArchivote(SaludoRequest) returns (stream SaludoResponse);
}